--- a/src/scss/_contentarea.scss
+++ b/src/scss/_contentarea.scss
@@ -64,8 +64,26 @@ $content-area-color: #F5F5F5;
             border-bottom: 3px solid darken($content-area-color, 7%);
             border-radius: 4px;
             align-items: center;
+
+            .fomgroup {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            label {
+                flex: 1 0 300px;
+            }
+
+            input, textarea {
+                flex: 1 0 300px;
+            }
         }
     }
+
+
 
 
 }
