Added save CSS animation

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -43,7 +43,7 @@ ol ol, ul ol {
 	list-style-position: inside;
 	margin-left: 15px;
 }
-
+@import "_animation.scss";
 @import "_typography.scss";
 @import "_sidebar.scss";
 @import "_contentarea.scss";
