--- a/src/scss/_contentarea.scss
+++ b/src/scss/_contentarea.scss
@@ -88,11 +88,28 @@ $content-area-color: #F5F5F5;
             }
 
             label {
-                flex: 1 0 300px;
+                flex: 1 0;
             }
 
             input, textarea {
-                flex: 1 0 300px;
+                flex: 1 0;
+            }
+
+            .row {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            .key {
+                flex: 1 0 300px; 
+                font-weight: bold;           
+            }
+
+            .value {
+                flex: 1 0 300px; 
             }
         }
     }
