--- a/src/scss/_contentarea.scss
+++ b/src/scss/_contentarea.scss
@@ -105,16 +105,20 @@ $content-area-color: #F5F5F5;
 
             .key {
                 flex: 1 0 300px; 
-                font-weight: bold;           
+                font-weight: bold;
+                margin-bottom: 5px;           
             }
 
             .value {
                 flex: 1 0 300px; 
+                margin-bottom: 5px;    
+            }
+
+            img.emblem {
+                border: 0;
+                vertical-align: -2px;
+                margin-right: 10px;
             }
         }
     }
-
-
-
-
 }
