--- a/src/scss/_contentarea.scss
+++ b/src/scss/_contentarea.scss
@@ -8,6 +8,7 @@ $content-area-color: #F5F5F5;
     right:0;
     top:0;
     bottom: 0;
+    overflow: auto;
 
     .header{
 
@@ -87,16 +88,37 @@ $content-area-color: #F5F5F5;
             }
 
             label {
-                flex: 1 0 300px;
+                flex: 1 0;
             }
 
             input, textarea {
-                flex: 1 0 300px;
+                flex: 1 0;
+            }
+
+            .row {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                margin-bottom: 10px;
+                margin-top: 10px;
+            }
+
+            .key {
+                flex: 1 0 300px; 
+                font-weight: bold;
+                margin-bottom: 5px;           
+            }
+
+            .value {
+                flex: 1 0 300px; 
+                margin-bottom: 5px;    
+            }
+
+            img.emblem {
+                border: 0;
+                vertical-align: -2px;
+                margin-right: 10px;
             }
         }
     }
-
-
-
-
 }
