--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -47,6 +47,9 @@ body{
                 color: darken($brand-color,35%);
                 text-decoration: none;
                 font-weight: bold;
+                i{
+                    float: right;
+                }
             }
 
             .fa{
