--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -2,6 +2,31 @@ $sidebar-color: #428bca;
 $sidebar-width: 250px;
 $logo: url("../img/logo.png");
 
+
+@-webkit-keyframes hover{
+    0%{
+        padding-left:15px;
+        background-color: $sidebar-color;
+    }
+    
+    100%{
+        padding-left:35px;
+        background-color: darken($sidebar-color, 5%);
+    }
+}
+
+@-webkit-keyframes hover-out{
+    0%{
+        padding-left:35px;
+        background-color: darken($sidebar-color, 5%);
+    }
+    
+    100%{
+        padding-left:15px;
+        background-color: $sidebar-color;
+    }
+}
+
 #sidebar{
     background-color: $sidebar-color;
     width: $sidebar-width;
@@ -40,10 +65,13 @@ $logo: url("../img/logo.png");
         display: flex;
         flex-direction: column;
         color: lighten($sidebar-color,35%);
+        padding:0;
+        margin: 0;
 
         li{
             display: flex;
-            
+            padding:0;
+            margin: 0;
             border-bottom: 1px solid darken($sidebar-color, 2%);
 
             a{
@@ -52,11 +80,22 @@ $logo: url("../img/logo.png");
                 color: lighten($sidebar-color,35%);
                 text-decoration: none;
                 font-weight: bold;
+                position: relative;
+                -webkit-animation: hover-out 0.3s 0s;
+                -webkit-animation-fill-mode: forwards;
                 
                 i{
                     float:right;
+                    position: relative;
                 }
             }
+            
+            a:hover{
+                position: relative;
+                -webkit-animation: hover 0.3s 0s;
+                -webkit-animation-fill-mode: forwards;
+            }
+            
 
             .fa{
                 position: relative;
