--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -10,6 +10,31 @@ $brand-color: #428bca;
     padding: 0;
 }
 
+
+@-webkit-keyframes hover{
+    0%{
+        padding-left:15px;
+        background-color: transparent;
+    }
+    
+    100%{
+        padding-left:35px;
+        background-color: darken($background-color, 5%);
+    }
+}
+
+@-webkit-keyframes hover-out{
+    0%{
+        padding-left:35px;
+        background-color: darken($background-color, 5%);
+    }
+    
+    100%{
+        padding-left:15px;
+        background-color: transparent;
+    }
+}
+
 body{
     background-color: $background-color;
     font-size: $font-size;
@@ -38,18 +63,31 @@ body{
 	ol{
         display: flex;
         flex-direction: column;
+        margin: 0;
+        padding: 0;
 
         li{
             display: flex;
-            padding: 15px;
+            margin: 0;
+            padding: 0;
+            
             a{
                 flex: 1;
                 color: darken($brand-color,35%);
+                padding: 15px;
                 text-decoration: none;
                 font-weight: bold;
+                -webkit-animation: hover-out 0.3s 0s;
+                -webkit-animation-fill-mode: forwards;
                 i{
                     float: right;
                 }
+            }
+            
+            a:hover{
+                position: relative;
+                -webkit-animation: hover 0.3s 0s;
+                -webkit-animation-fill-mode: forwards;
             }
 
             .fa{
