--- a/src/scss/_contentarea.scss
+++ b/src/scss/_contentarea.scss
@@ -91,7 +91,7 @@ $content-area-color: #F5F5F5;
                 flex: 1 0;
             }
 
-            input, textarea {
+            input, textarea, select {
                 flex: 1 0;
             }
 
@@ -104,14 +104,14 @@ $content-area-color: #F5F5F5;
             }
 
             .key {
-                flex: 1 0 300px; 
+                flex: 1 0 300px;
                 font-weight: bold;
-                margin-bottom: 5px;           
+                margin-bottom: 5px;
             }
 
             .value {
-                flex: 1 0 300px; 
-                margin-bottom: 5px;    
+                flex: 1 0 300px;
+                margin-bottom: 5px;
             }
 
             img.emblem {
