--- a/src/scss/options.scss
+++ b/src/scss/options.scss
@@ -1,75 +1,6 @@
-$background-color: #FFF;
-$font-color: #444;
-$font-size: 16px;
-$font-stack: sans-serif;
-
-$label-width: 200px;
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body{
-    background-color: $background-color;
-    font-size: $font-size;
-    color: $font-color;
-    font-family: $font-stack; 
-}
-
-ul {
-	margin: 10px;
-	list-style-type: disc;
-	list-style-position: inside;
-}
-
-li {
-	margin-top: 2px;
-	margin-bottom: 2px;
-}
-
-ol {
-	list-style-type: decimal;
-	list-style-position: inside;
-}
-
-ul ul, ol ul {
-	list-style-type: circle;
-	list-style-position: inside;
-	margin-left: 15px;
-}
-ol ol, ul ol {
-	list-style-type: lower-latin;
-	list-style-position: inside;
-	margin-left: 15px;
-}
-
-#message-container{
-    width: 100%;
-    height: 75px;
-    line-height: 75px;
-    text-align: center;
-    background-color:white;
-    position: absolute;
-    z-index: 10;
-    box-shadow: inset 0 -5px 5px -3px rgba(0,0,0,0.2);
-    font-weight: bold;
-    top: -75px;
-    opacity: 0;
-}
-
-#message-container.success{
-    background-color: #d6ff9f;
-    color: #185d18;
-
-}
-
-#message-container.failure{
-    background-color: #ff9fa3;
-    color: #5d1818;
-
-}
-@import "_animation.scss";
-@import "_typography.scss";
-@import "_sidebar.scss";
-@import "_contentarea.scss";
+@import 'reset';
+@import 'vars';
+@import 'typography';
+@import 'sidebar';
+@import 'contentarea';
+@import 'messages';
