--- a/src/scss/_contentarea.scss
+++ b/src/scss/_contentarea.scss
@@ -1,4 +1,3 @@
-$content-area-color: #F5F5F5;
 
 #contentarea{
 
@@ -70,21 +69,33 @@ $content-area-color: #F5F5F5;
         flex-direction: row;
 
         .contentbox{
-            margin: 15px;
+            margin: 1rem 0.5rem 0 0.5rem;   
             padding: 15px;
             display: block;
             flex: 1 0 500px;
             background-color: white;
             border-bottom: 3px solid darken($content-area-color, 7%);
-            border-radius: 5px;
             align-items: center;
 
-            .fomgroup {
+            &:first-child{
+                margin-left: 1rem;
+            }
+
+            &:last-child{
+                margin-right: 1rem;
+            }
+            .formgroup {
                 display: flex;
                 flex-wrap: wrap;
                 flex-direction: row;
-                margin-bottom: 10px;
-                margin-top: 10px;
+                margin-bottom: 1rem;
+                margin-top: 1rem;
+
+                input{
+                    padding: 1rem;
+                    border: 1px solid $line-color;
+                    box-sizing: border-box;
+                }
             }
 
             label {
