Critical bug & small design fixes

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -65,5 +65,5 @@ a.mdl-button {
 
 .page-content .login-required .material-icons {
 	margin:0 10px 0 0;
-	vertical-align:top;
+	/*vertical-align:top;*/
 }
