--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -1,55 +1,13 @@
 html, body {
-	font-family: 'Roboto', 'Helvetica', sans-serif;
 	min-width: 500px;
 	min-height: 400px;
 }
 
-a {
-	color: #546e7a;
-	text-decoration: none;
-}
-
-a.mdl-button {
-	color: #3f51b5!important;
-}
-
-.mdl-layout__header {
-	padding-top: 15px;
-}
-
-.mdl-layout__header-row {
-	padding: 0 32px;
-}
+.downloadPage { margin: 2% 0; }
 
 #download .page-content {
 	text-align: center;
 	padding: 20px;
-}
-
-.mdl-card.recentCards {
-	flex-direction: row;
-	min-height: inherit;
-	min-height: 85px;
-}
-
-.mdl-card.recentCards .mdl-card__title-text img {
-	max-height: 36px;
-	margin: 5px;
-}
-
-.mdl-card.recentCards .filename {
-	font-size: 13px;
-	word-wrap: break-word;
-}
-
-.mdl-card.recentCards .recentLinks {
-	position: absolute;
-	right: 16px;
-	bottom: 6px;
-}
-
-.mdl-card__menu {
-	font-size: 12px;
 }
 
 .page-content .login-required h6 {
@@ -63,7 +21,20 @@ a.mdl-button {
     box-sizing: border-box;
 }
 
-.page-content .login-required .material-icons {
-	margin:0 10px 0 0;
-	/*vertical-align:top;*/
+.page-content .login-required .material-icons { margin: 0 10px 0 0; }
+
+/*
+  Material
+*/
+
+.mdl-layout__header { padding-top: 15px; }
+.mdl-layout__header-row { padding: 0 32px; }
+.mdl-layout.is-upgraded .mdl-layout__tab.is-active::after { background: #fff; }
+
+.mdl-card.recentCards .filename { font-size: 13px; }
+
+.mdl-card.recentCards .recentLinks {
+	position: absolute;
+	right: 16px;
+	bottom: 6px;
 }
